syntax = "proto3";

package codec;

option go_package = "codec_service/;codec_service";

service CodecService {
  rpc Encode(EncodeRequest) returns (EncodeResponse);
  rpc Decode(DecodeRequest) returns (DecodeResponse);
}

message EncodeRequest {
  string smartContractCode = 1; // Input smart contract code to be encoded into JSON
}

message EncodeResponse {
  string jsonStructure = 1; // Encoded JSON structure of the smart contract
}

message DecodeRequest {
  string jsonStructure = 1; // Input JSON structure to be decoded back into smart contract code
}

message DecodeResponse {
  string smartContractCode = 1; // Decoded smart contract code
}
